Removed Commons IO dependency.